branches/wip/Archive/3cb1cd1a8dd18c2ab85cdc665ed387e8-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:10:1: error: expected ';' after class definition
 }
 ^
main.cpp: In function 'int main()':
main.cpp:16:36: error: 'run' was not declared in this scope
  std::for_each(v.begin(), v.end(), run);
                                    ^
